--- a/week_1/assignment_1.ipynb
+++ b/week_1/assignment_1.ipynb
@@ -13,14 +13,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "722521b1",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-10T22:34:22.164161Z",
-     "iopub.status.busy": "2024-06-10T22:34:22.163062Z",
-     "iopub.status.idle": "2024-06-10T22:34:22.210724Z",
-     "shell.execute_reply": "2024-06-10T22:34:22.209690Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
@@ -42,21 +35,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "8923a6da",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-10T22:34:22.216116Z",
-     "iopub.status.busy": "2024-06-10T22:34:22.215738Z",
-     "iopub.status.idle": "2024-06-10T22:34:22.225601Z",
-     "shell.execute_reply": "2024-06-10T22:34:22.224583Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define a key function to extract the numeric part of each variable name\n",
     "def extract_number(lp_var):\n",
-    "    match_obj = re.search(r\"\\d+\", lp_var.name)\n",
-    "    assert match_obj is not None\n",
-    "    return int(match_obj.group())\n",
+    "    return int(re.search(r\"\\d+\", lp_var.name).group())  # pyright: ignore [reportOptionalMemberAccess]\n",
     "\n",
     "\n",
     "def formulate_lp_problem(m, n, list_c, list_a, list_b):\n",
@@ -107,14 +91,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "e52e1cfc",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-10T22:34:22.229493Z",
-     "iopub.status.busy": "2024-06-10T22:34:22.229127Z",
-     "iopub.status.idle": "2024-06-10T22:34:22.244279Z",
-     "shell.execute_reply": "2024-06-10T22:34:22.243314Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -124,7 +101,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/4b73ed8cf5f44927896ad8c2d4635e1c-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/4b73ed8cf5f44927896ad8c2d4635e1c-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/fe50dd94e59c41a39b887c695bc05227-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/fe50dd94e59c41a39b887c695bc05227-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 9 COLUMNS\n",
@@ -140,7 +117,7 @@
       "After Postsolve, objective 7, infeasibilities - dual 0 (0), primal 0 (0)\n",
       "Optimal objective 7 - 0 iterations time 0.002, Presolve 0.00\n",
       "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.02\n",
       "\n",
       "[2.0, 9.0, -4.0]\n",
       "Passed: 3 points!\n"
@@ -168,14 +145,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "51d839a9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-10T22:34:22.248236Z",
-     "iopub.status.busy": "2024-06-10T22:34:22.247782Z",
-     "iopub.status.idle": "2024-06-10T22:34:22.264316Z",
-     "shell.execute_reply": "2024-06-10T22:34:22.263002Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -185,7 +155,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/4bfbb5d0b389431b93e223da028387d7-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/4bfbb5d0b389431b93e223da028387d7-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/ea82ab4e5f0a44e48a2ee1b010036ad4-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/ea82ab4e5f0a44e48a2ee1b010036ad4-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 10 COLUMNS\n",
@@ -235,14 +205,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "40b89b89",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-10T22:34:22.271759Z",
-     "iopub.status.busy": "2024-06-10T22:34:22.271436Z",
-     "iopub.status.idle": "2024-06-10T22:34:22.285065Z",
-     "shell.execute_reply": "2024-06-10T22:34:22.283894Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -252,7 +215,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/ca28a63cf43c48c6ad75d10db43dc658-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/ca28a63cf43c48c6ad75d10db43dc658-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/62ca419b2fa045af97ff754a674a8508-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/62ca419b2fa045af97ff754a674a8508-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 9 COLUMNS\n",
@@ -300,14 +263,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "6053a8e2",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-10T22:34:22.290874Z",
-     "iopub.status.busy": "2024-06-10T22:34:22.290004Z",
-     "iopub.status.idle": "2024-06-10T22:34:22.309788Z",
-     "shell.execute_reply": "2024-06-10T22:34:22.308619Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -317,7 +273,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/8e77d1e59ac545199ab1d535a6c59651-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/8e77d1e59ac545199ab1d535a6c59651-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/ac27cba0dfd5453f95b738775f8ed048-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/ac27cba0dfd5453f95b738775f8ed048-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 21 COLUMNS\n",
@@ -362,6 +318,147 @@
     "assert abs(sols[6] - 1.0) <= 1e-03, \"Solution does not match expected one\"\n",
     "assert all([abs(sols[i]) <= 1e-03 for i in range(n) if i != 6]), \"Solution does not match expected one\"\n",
     "print(\"Passed: 3 points!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c1dd2b3",
+   "metadata": {},
+   "source": [
+    "## Problem 2: LP formulation for an investment problem\n",
+    "\n",
+    "Write down the expression for the objective function in terms of\n",
+    "$x_1, \\ldots, x_6$. Also specify if we are to maximize or minimize it.\n",
+    "\\begin{equation}\n",
+    "\\max \\qquad 25 x_1 + 20 x_2 + 3 x_3 + 1.5 x_4 + 3 x_5 + 4.5 x_6\n",
+    "\\end{equation}\n",
+    "\n",
+    "Write down the constraint that expresses that the total cost of investment\n",
+    "must be less than $B = 10,000$.\n",
+    "\\begin{equation}\n",
+    "129 x_1 + 286 x_2 + 72.29 x_3 + 38 x_4 + 52 x_5 + 148 x_6 \\leq 10,000\n",
+    "\\end{equation}\n",
+    "\n",
+    "Write down the constraints that the total investment in each category cannot\n",
+    "exceed 2/3 of the budget. You should write down three constraints, one for\n",
+    "each category.\n",
+    "\\begin{eqnarray}\n",
+    "  387 x_1 + 858 x_2 &\\leq& 20,000 \\\\\n",
+    "  216.87 x_3 + 114 x_4 &\\leq& 20,000 \\\\\n",
+    "  156 x_5 + 444 x_6 &\\leq& 20,000\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "Write down the constraints that the total investment in each category must\n",
+    "exceed 1/6 of the budget. You should write down three constraints, one for\n",
+    "each category.\n",
+    "\\begin{eqnarray}\n",
+    "  774 x_1 + 1,716 x_2 &\\geq& 10,000 \\\\\n",
+    "  433.74 x_3 + 228 x_4 &\\geq& 10,000 \\\\\n",
+    "  312 x_5 + 888 x_6 &\\geq& 10,000\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "Write down an expression for the price of the overall portfolio. Also write\n",
+    "down an expression for the overall earnings of the portfolio.\n",
+    "\\begin{eqnarray}\n",
+    "  \\mathrm{Price} &=& 129 x_1 + 286 x_2 + 72.29 x_3 + 38 x_4 + 52 x_5 + 148 x_6 \\\\\n",
+    "  \\mathrm{Earnings} &=& 1.9 x_1 + 8.1 x_2 + 1.5 x_3 + 5 x_4 + 2.5 x_5 + 5.2 x_6\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "We wish to enforce the constraint that the overall Price/Earnings ratio of\n",
+    "the portfolio cannot exceed 15. Write down the constraint as\n",
+    "$\\mathrm{Price} \\leq 15 \\times \\mathrm{Earnings}$.\n",
+    "\\begin{equation}\n",
+    "100.5 x_1 + 164.5 x_2 + 49.79 x_3 - 37 x_4 + 14.5 x_5 + 70 x_6 \\leq 0\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "89bf5c49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Dec 15 2019 \n",
+      "\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/8dbd57bbf4e34a8dbc1f55094d127076-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/8dbd57bbf4e34a8dbc1f55094d127076-pulp.sol (default strategy 1)\n",
+      "At line 2 NAME          MODEL\n",
+      "At line 3 ROWS\n",
+      "At line 13 COLUMNS\n",
+      "At line 44 RHS\n",
+      "At line 53 BOUNDS\n",
+      "At line 54 ENDATA\n",
+      "Problem MODEL has 8 rows, 6 columns and 24 elements\n",
+      "Coin0008I MODEL read with 0 errors\n",
+      "Option for timeMode changed from cpu to elapsed\n",
+      "Presolve 8 (0) rows, 6 (0) columns and 24 (0) elements\n",
+      "0  Obj -0 Primal inf 40.144053 (3) Dual inf 79.812412 (6)\n",
+      "0  Obj -0 Primal inf 40.144053 (3) Dual inf 5.7382841e+10 (6)\n",
+      "6  Obj 1098.5985\n",
+      "Optimal - objective value 1098.5985\n",
+      "Optimal objective 1098.59854 - 6 iterations time 0.002\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.00\n",
+      "\n",
+      "x1 = 33.830665\n",
+      "x2 = 0.0\n",
+      "x3 = 0.0\n",
+      "x4 = 104.45204\n",
+      "x5 = 32.051282\n",
+      "x6 = 0.0\n",
+      "Objective value = 1098.598531\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a linear programming model and set it to maximize its objective\n",
+    "lpModel = pl.LpProblem(\"InvestmentProblem\", pl.LpMaximize)\n",
+    "\n",
+    "# Create a variable called x1 and set its bounds to be between 0 and infinity\n",
+    "x1 = pl.LpVariable(\"x1\", 0)\n",
+    "\n",
+    "# Next create variables x2, ..., x6\n",
+    "x2 = pl.LpVariable(\"x2\", 0)\n",
+    "x3 = pl.LpVariable(\"x3\", 0)\n",
+    "x4 = pl.LpVariable(\"x4\", 0)\n",
+    "x5 = pl.LpVariable(\"x5\", 0)\n",
+    "x6 = pl.LpVariable(\"x6\", 0)\n",
+    "\n",
+    "# Set the objective function\n",
+    "lpModel += 25 * x1 + 20 * x2 + 3 * x3 + 1.5 * x4 + 3 * x5 + 4.5 * x6\n",
+    "\n",
+    "# Add the constraints\n",
+    "lpModel += 129 * x1 + 286 * x2 + 72.29 * x3 + 38 * x4 + 52 * x5 + 148 * x6 <= 10000\n",
+    "lpModel += 387 * x1 + 858 * x2 <= 20000\n",
+    "lpModel += 216.87 * x3 + 114 * x4 <= 20000\n",
+    "lpModel += 156 * x5 + 444 * x6 <= 20000\n",
+    "lpModel += 774 * x1 + 1716 * x2 >= 10000\n",
+    "lpModel += 433.74 * x3 + 228 * x4 >= 10000\n",
+    "lpModel += 312 * x5 + 888 * x6 >= 10000\n",
+    "lpModel += 100.5 * x1 + 164.5 * x2 + 49.79 * x3 - 37 * x4 + 14.5 * x5 + 70 * x6 <= 0\n",
+    "\n",
+    "# Solve the model and print the solutions\n",
+    "lpModel.solve()\n",
+    "for v in lpModel.variables():\n",
+    "    print(v.name, \"=\", v.varValue)\n",
+    "\n",
+    "# Optimized objective function\n",
+    "print(\"Objective value =\", pl.value(lpModel.objective))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c4b0e38f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert abs(pl.value(lpModel.objective) - 1098.59) <= 0.1, \"Test failed\""
    ]
   }
  ],
