W1: Change pulp import

--- a/week_1/assignment_1.ipynb
+++ b/week_1/assignment_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f9ff55db",
+   "id": "24b00144",
    "metadata": {},
    "source": [
     "# Week 1: Programming Assignment\n",
@@ -12,18 +12,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "722521b1",
-   "metadata": {},
+   "id": "95ed39ba",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-11T16:50:59.414666Z",
+     "iopub.status.busy": "2024-06-11T16:50:59.413758Z",
+     "iopub.status.idle": "2024-06-11T16:50:59.691621Z",
+     "shell.execute_reply": "2024-06-11T16:50:59.688411Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import re\n",
     "\n",
-    "import pulp as pl"
+    "# It's moronic to do this, but I want to avoid problems with the autograder\n",
+    "from pulp import *  # pyright: ignore [reportWildcardImportFromLibrary]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fdc1dfcc",
+   "id": "c657adbf",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -34,8 +42,15 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8923a6da",
-   "metadata": {},
+   "id": "f4edecb6",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-11T16:50:59.700982Z",
+     "iopub.status.busy": "2024-06-11T16:50:59.699740Z",
+     "iopub.status.idle": "2024-06-11T16:50:59.711541Z",
+     "shell.execute_reply": "2024-06-11T16:50:59.710533Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Define a key function to extract the numeric part of each variable name\n",
@@ -53,22 +68,22 @@
     "    assert all(len(lst) == n for lst in list_a)\n",
     "\n",
     "    # Create a linear programming model and set it to maximize its objective\n",
-    "    lp_model = pl.LpProblem(\"LPProblem\", pl.LpMaximize)\n",
+    "    lp_model = LpProblem(\"LPProblem\", LpMaximize)\n",
     "\n",
     "    # Create all the decision variables and store them in a list\n",
-    "    decision_vars = [pl.LpVariable(f\"x{i}\") for i in range(n)]\n",
+    "    decision_vars = [LpVariable(f\"x{i}\") for i in range(n)]\n",
     "\n",
     "    # Create the objective function\n",
-    "    lp_model += pl.lpSum([c * v for c, v in zip(list_c, decision_vars)])\n",
+    "    lp_model += lpSum([c * v for c, v in zip(list_c, decision_vars)])\n",
     "\n",
     "    # Create all the constraints\n",
     "    for coeffs, rhs in zip(list_a, list_b):\n",
-    "        lhs = pl.lpSum([c * v for c, v in zip(coeffs, decision_vars)])\n",
+    "        lhs = lpSum([c * v for c, v in zip(coeffs, decision_vars)])\n",
     "        lp_model += lhs <= rhs\n",
     "\n",
     "    # Solve the problem and get its status\n",
     "    lp_model.solve()\n",
-    "    status = pl.LpStatus[lp_model.status]\n",
+    "    status = LpStatus[lp_model.status]\n",
     "\n",
     "    # Return the expected tuple\n",
     "    is_feasible = False\n",
@@ -90,8 +105,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e52e1cfc",
-   "metadata": {},
+   "id": "ae4b0440",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-11T16:50:59.716053Z",
+     "iopub.status.busy": "2024-06-11T16:50:59.715747Z",
+     "iopub.status.idle": "2024-06-11T16:50:59.960960Z",
+     "shell.execute_reply": "2024-06-11T16:50:59.958545Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -101,7 +123,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/fe50dd94e59c41a39b887c695bc05227-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/fe50dd94e59c41a39b887c695bc05227-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/86c39654b9cd400d8928c0576a47e197-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/86c39654b9cd400d8928c0576a47e197-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 9 COLUMNS\n",
@@ -117,7 +139,7 @@
       "After Postsolve, objective 7, infeasibilities - dual 0 (0), primal 0 (0)\n",
       "Optimal objective 7 - 0 iterations time 0.002, Presolve 0.00\n",
       "Option for printingOptions changed from normal to all\n",
-      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.02\n",
+      "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.01\n",
       "\n",
       "[2.0, 9.0, -4.0]\n",
       "Passed: 3 points!\n"
@@ -144,8 +166,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "51d839a9",
-   "metadata": {},
+   "id": "8841e2b9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-11T16:50:59.969434Z",
+     "iopub.status.busy": "2024-06-11T16:50:59.968471Z",
+     "iopub.status.idle": "2024-06-11T16:50:59.986458Z",
+     "shell.execute_reply": "2024-06-11T16:50:59.985123Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -155,7 +184,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/ea82ab4e5f0a44e48a2ee1b010036ad4-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/ea82ab4e5f0a44e48a2ee1b010036ad4-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/4e4de85497ab4fc9aa8288462d0f5246-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/4e4de85497ab4fc9aa8288462d0f5246-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 10 COLUMNS\n",
@@ -204,8 +233,15 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "40b89b89",
-   "metadata": {},
+   "id": "7f5b3cde",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-11T16:50:59.992246Z",
+     "iopub.status.busy": "2024-06-11T16:50:59.991890Z",
+     "iopub.status.idle": "2024-06-11T16:51:00.006126Z",
+     "shell.execute_reply": "2024-06-11T16:51:00.005014Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,7 +251,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/62ca419b2fa045af97ff754a674a8508-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/62ca419b2fa045af97ff754a674a8508-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/4182fe3c28a14bb1b0a620bb121e2fff-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/4182fe3c28a14bb1b0a620bb121e2fff-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 9 COLUMNS\n",
@@ -262,8 +298,15 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6053a8e2",
-   "metadata": {},
+   "id": "05a8c109",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-11T16:51:00.012032Z",
+     "iopub.status.busy": "2024-06-11T16:51:00.011246Z",
+     "iopub.status.idle": "2024-06-11T16:51:00.029489Z",
+     "shell.execute_reply": "2024-06-11T16:51:00.028326Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -273,7 +316,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/ac27cba0dfd5453f95b738775f8ed048-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/ac27cba0dfd5453f95b738775f8ed048-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/b07e26ce648e40018e8eb162b1b5d416-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/b07e26ce648e40018e8eb162b1b5d416-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 21 COLUMNS\n",
@@ -322,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c1dd2b3",
+   "id": "e929f3d9",
    "metadata": {},
    "source": [
     "## Problem 2: LP formulation for an investment problem\n",
@@ -375,8 +418,15 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "89bf5c49",
-   "metadata": {},
+   "id": "907a9222",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-11T16:51:00.035796Z",
+     "iopub.status.busy": "2024-06-11T16:51:00.035166Z",
+     "iopub.status.idle": "2024-06-11T16:51:00.053601Z",
+     "shell.execute_reply": "2024-06-11T16:51:00.052463Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -386,7 +436,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/8dbd57bbf4e34a8dbc1f55094d127076-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/8dbd57bbf4e34a8dbc1f55094d127076-pulp.sol (default strategy 1)\n",
+      "command line - /home/woitek/.local/share/virtualenvs/coursera_linear_programming-sQGDHXUS/lib/python3.12/site-packages/pulp/solverdir/cbc/linux/64/cbc /tmp/8fc517e55686476c9a84fe41fc89978e-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /tmp/8fc517e55686476c9a84fe41fc89978e-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 13 COLUMNS\n",
@@ -417,17 +467,17 @@
    ],
    "source": [
     "# Create a linear programming model and set it to maximize its objective\n",
-    "lpModel = pl.LpProblem(\"InvestmentProblem\", pl.LpMaximize)\n",
+    "lpModel = LpProblem(\"InvestmentProblem\", LpMaximize)\n",
     "\n",
     "# Create a variable called x1 and set its bounds to be between 0 and infinity\n",
-    "x1 = pl.LpVariable(\"x1\", 0)\n",
+    "x1 = LpVariable(\"x1\", 0)\n",
     "\n",
     "# Next create variables x2, ..., x6\n",
-    "x2 = pl.LpVariable(\"x2\", 0)\n",
-    "x3 = pl.LpVariable(\"x3\", 0)\n",
-    "x4 = pl.LpVariable(\"x4\", 0)\n",
-    "x5 = pl.LpVariable(\"x5\", 0)\n",
-    "x6 = pl.LpVariable(\"x6\", 0)\n",
+    "x2 = LpVariable(\"x2\", 0)\n",
+    "x3 = LpVariable(\"x3\", 0)\n",
+    "x4 = LpVariable(\"x4\", 0)\n",
+    "x5 = LpVariable(\"x5\", 0)\n",
+    "x6 = LpVariable(\"x6\", 0)\n",
     "\n",
     "# Set the objective function\n",
     "lpModel += 25 * x1 + 20 * x2 + 3 * x3 + 1.5 * x4 + 3 * x5 + 4.5 * x6\n",
@@ -448,17 +498,24 @@
     "    print(v.name, \"=\", v.varValue)\n",
     "\n",
     "# Optimized objective function\n",
-    "print(\"Objective value =\", pl.value(lpModel.objective))"
+    "print(\"Objective value =\", value(lpModel.objective))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c4b0e38f",
-   "metadata": {},
+   "id": "3603fa9a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-11T16:51:00.058357Z",
+     "iopub.status.busy": "2024-06-11T16:51:00.057856Z",
+     "iopub.status.idle": "2024-06-11T16:51:00.063380Z",
+     "shell.execute_reply": "2024-06-11T16:51:00.062329Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "assert abs(pl.value(lpModel.objective) - 1098.59) <= 0.1, \"Test failed\""
+    "assert abs(value(lpModel.objective) - 1098.59) <= 0.1, \"Test failed\""
    ]
   }
  ],
